WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221983
operationNewArrayWithSize should call tryCreate instead of create
https://bugs.webkit.org/show_bug.cgi?id=221983
Summary
operationNewArrayWithSize should call tryCreate instead of create
Saam Barati
Reported
2021-02-16 11:49:12 PST
...
Attachments
patch
(4.30 KB, patch)
2021-02-16 12:14 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2021-02-16 11:49:22 PST
Allocation isn't guaranteed to succeed.
Saam Barati
Comment 2
2021-02-16 11:49:52 PST
<
rdar://74265630
>
Saam Barati
Comment 3
2021-02-16 12:14:06 PST
Created
attachment 420518
[details]
patch
Mark Lam
Comment 4
2021-02-16 12:16:44 PST
Comment on
attachment 420518
[details]
patch r=me
EWS
Comment 5
2021-02-16 16:33:46 PST
Committed
r272938
: <
https://commits.webkit.org/r272938
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420518
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug